--- a/edit-document.html
+++ b/edit-document.html
@@ -15,7 +15,7 @@
         const documet = (new DocumentList).getDocumentId(key);
         const form = new Form();
         form.Fields = documet;
-        form.render();
+        form.render(key);
     </script>
 </body>
 </html>
