--- a/new-document.html
+++ b/new-document.html
@@ -11,7 +11,7 @@
     <script type="module">
         import {App} from "./js/App.js";
         const app = new App();
-        app.render();
+//        app.render();
     </script>
 
 </body>
