--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     
     <a href="./document-list.html">Lista Dokumentów</a>
+    <a href="./form-list.html">Lista Formularzy</a>
+    <a href="./new-form.html">Nowy Formularz</a>
     <a href="./new-document.html">Nowy Dokument</a>
 
 </body>
